fix timeline item meta alignment

--- a/src/blocks/content-timeline/content-timeline/style.scss
+++ b/src/blocks/content-timeline/content-timeline/style.scss
@@ -166,6 +166,9 @@
 			display: block;
 			flex: 1 1 50%;
 		}
+		&-content{
+			text-align: inherit;
+		}
 	}
 
 	& &__mobile-meta {
